<resources>
    <string name="app_name">CropZ</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>


    <string name="login_btn_lbl">Login</string>
    <string name="register_btn_lbl">Sign Up</string>
    <string name="update_garden_btn_lbl">Update Garden</string>


    <string name="signup_text">New? Signup here! </string>
    <string name="prompt_name">Name</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="add_new_garden_item_string">Add new Garden</string>
    <string name="title_activity_add_garden">AddGardenActivity</string>

    <string name="garden_name">Garden Name</string>
    <string name="enter_garden_string">Enter Garden Name</string>
    <string name="time_and_date_string">Time and Date</string>
    <string name="no_date_set_string">0000-00-00</string>
    <string name="no_time_set_string">00:00:00</string>
    <string name="choose_date_string">Choose Date</string>
    <string name="choose_time_string">Choose Time</string>
    <string name="cancel_string">Cancel</string>
    <string name="reset_string">Reset</string>
    <string name="submit_string">Submit</string>

    <string name="delete">Delete Item</string>
    <string name="cancel">Cancel without Delete</string>
    <string name="add_new_veg_item_string">Add New Veg Item</string>


    <string name="done_string">Harvested:</string>
    <string name="priority_string">Priority:</string>
    <string name="date_string">Planted:</string>
    <string name="title_string">Title</string>
    <string name="veg_string">Vegetable</string>
    <string name="status_string">Status</string>
    <string name="not_done_string">Not Done</string>
    <string name="priority_low_string">Low</string>
    <string name="priority_medium_string">Medium</string>
    <string name="priority_high_string">High</string>
    <string name="enter_veg_string">Choose Veg</string>

    <string-array name="priority_list">
        <item>HIGH</item>
        <item>MED</item>
        <item>LOW</item> </string-array>

    <string-array name="quantity_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>

</resources>
