<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    >

    <!-- Title -->

    <TextView
        android:layout_marginTop="60dp"
        android:id="@+id/EnterGardenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/garden_name"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>

    <EditText
        android:id="@+id/EnterGardenNameTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/EnterGardenName"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/enter_garden_string"
        android:inputType="textShortMessage">

        <requestFocus />
    </EditText>


    <!-- Time and Date -->

    <TextView
        android:id="@+id/time_and_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/EnterGardenNameTxt"
        android:layout_marginTop="25dp"
        android:text="@string/time_and_date_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/time_and_date"
        android:layout_marginTop="12dp"
        android:text="@string/no_date_set_string" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/time_and_date"
        android:text="@string/no_time_set_string" />

    <Button
        android:id="@+id/date_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/date"
        android:text="@string/choose_date_string"
        style="?android:textAppearanceSmall"
        android:textStyle="bold"
        android:layout_marginLeft="5dp"
        android:background="@drawable/btn_selecter"
        android:textColor="@color/textColor"
        />

    <Button
        android:id="@+id/time_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/date_picker_button"
        android:layout_below="@id/time"
        android:text="@string/choose_time_string"
        style="?android:textAppearanceSmall"
        android:textStyle="bold"
        android:layout_marginRight="5dp"
        android:background="@drawable/btn_selecter"
        android:textColor="@color/textColor"
        />

    <!-- Buttons -->

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        style="?android:textAppearanceSmall"
        android:textStyle="bold"
        android:background="@drawable/btn_selecter"
        android:textColor="@color/textColor"
        android:text="@string/cancel_string"
        />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_string"
        style="?android:textAppearanceSmall"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:background="@drawable/btn_selecter"
        android:textColor="@color/textColor"
        />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/submit_string"
        style="?android:textAppearanceSmall"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/btn_selecter"
        android:textColor="@color/textColor"
        />

</RelativeLayout>